Update WP DataTables form to use flexbox to fix styles on mobile and desktop.

--- a/wp-content/themes/defense360/sass/components/_wpdatatables.scss
+++ b/wp-content/themes/defense360/sass/components/_wpdatatables.scss
@@ -2,65 +2,6 @@
 =            WP DataTables            =
 =====================================*/
 
-/*----------  Table  ----------*/
-// .wpDataTablesWrapper .wpDataTable {
-// 	> thead > tr > th {
-// 		display: table-cell;
-// 		background-color: $line-gray !important;
-// 		font-weight: normal !important;
-// 		border: 0 !important;
-// 		border-right: 1px solid $blue-gray !important;
-
-// 		&:last-of-type {
-// 			border-right: 0 !important;
-// 		}
-// 	}
-
-// 	thead th.sorting_asc,
-// 	thead th.sorting_desc,
-// 	thead th.sorting:hover {
-// 		background-color: $color__background-table-sorted !important;
-// 	}
-
-// 	tr.odd td {
-// 		background-color: $white !important;
-// 	}
-
-// 	tr.even td {
-// 		background-color: $off-white !important;
-// 	}
-
-// 	tr.odd,
-// 	tr.even {
-// 		td.sorting_1 {
-// 			background-color: $color__background-table-sorted !important;
-// 		}
-
-// 		&:hover td { background-color: $color__background-table-row-hover !important; }
-// 	}
-
-// 	tr td:first-child {
-// 		border-left: 0;
-// 	}
-
-// 	tr td {
-// 		border-left-color: $line-gray !important;
-// 		border-bottom-color: $blue-gray !important;
-// 		border-right: 0 !important;
-// 		border-top: 0 !important;
-// 	}
-
-// 	tfoot {
-// 		td {
-// 			padding-top: 4px !important;
-// 			padding-bottom: 4px !important;
-// 		}
-// 		.form-control {
-// 			font-size: 12px !important;
-// 		}
-// 	}
-// }
-
 /*----------  Form Elements  ----------*/
 .wpDataTablesWrapper {
 	label {
@@ -72,6 +13,19 @@
 
 .wpdt-c {
 	text-align: center;
+}
+
+.wpDataTableFilterBox {
+	@include breakpoint("medium") {
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-ms-flex-wrap: wrap;
+		    flex-wrap: wrap;
+		-webkit-box-pack: start;
+		-ms-flex-pack: start;
+        justify-content: flex-start;
+	}
 }
 
 .wpdt-c .form-control {
@@ -94,25 +48,42 @@
 }
 
 .wpDataTablesFilter .wpDataTableFilterSection:not(#wdt-clear-filters-button-block):not(#wdt-cf-search-filters-button-block) {
+	float: none !important;
 	width: unset !important;
 	min-height: unset !important;
-	margin-right: 1.5rem !important;
-	margin-bottom: 1.5rem !important;
-	padding: 0;
+	margin-bottom: 1rem !important;
+	margin-right: 0 !important;
+	padding: 0 1rem !important;
 	text-align: left;
+
+	@include breakpoint("medium") {
+		-webkit-box-flex: 0;
+		-ms-flex: 0 1 auto;
+		flex: 0 1 auto;
+		-ms-flex-preferred-size: 25%;
+		    flex-basis: 25%;
+		max-width: 25%;
+	}
+
 }
 
 .wpDataTablesFilter .wpDataTableFilterSection {
 	div {
 		display: inline-block;
 		vertical-align: top;
+		width: calc(100% - 100px);
+		margin-left: 0.5rem;
+
 		@include breakpoint("medium") {
 			display: block;
+			width: unset;
+			margin-left: 0;
 		}
 	}
 	label {
 		width: 78px;
 		text-align: right;
+
 		@include breakpoint("medium"){
 			width: unset;
 		}
@@ -120,9 +91,8 @@
 }
 
 .wpDataTablesFilter .wpDataTableFilterSection .form-control {
-  border: 2px solid #E7E7E7 !important;
+  	border: 2px solid #E7E7E7 !important;
 	padding-left: 7px !important;
-	width: 200px !important;
 }
 
 ::-webkit-input-placeholder {
